--- a/UI/src/app/create-account/create-account.component.html
+++ b/UI/src/app/create-account/create-account.component.html
@@ -4,13 +4,13 @@
   <img width="200" alt="Dev Technology Logo" src="assets/images/dev-logo.png" title="Dev Technology Group, Inc.">
   <br/><br/><br/>
 </div>
-  
+
 <div class="container create-container">
 
   <form>
     <div class="form-group">
       <label for="username">User ID</label>
-      <input type="text" class="form-control" id="id" name="id" required 
+      <input type="text" class="form-control" id="id" name="id" required
         [(ngModel)]="user.id" title="Enter User ID"
         data-placement="right" data-toggle="tooltip" #userid="ngModel">
       <div *ngIf="userid.invalid && (userid.dirty || userid.touched)" class="alert alert-danger">
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <label for="first_name">First Name</label>
-      <input type="text" class="form-control" id="fname" required 
+      <input type="text" class="form-control" id="fname" required
         [(ngModel)]="user.first_name" name="fname" title="Enter First Name"
         data-placement="right" data-toggle="tooltip" #fname="ngModel">
       <div *ngIf="fname.invalid && (fname.dirty || fname.touched)" class="alert alert-danger">
@@ -34,7 +34,7 @@
 
     <div class="form-group">
       <label for="last_name">Last Name</label>
-      <input type="text" class="form-control" id="lname" required 
+      <input type="text" class="form-control" id="lname" required
         [(ngModel)]="user.last_name" name="lname" title="Enter Last Name"
         data-placement="right" data-toggle="tooltip" #lname="ngModel">
       <div *ngIf="lname.invalid && (lname.dirty || lname.touched)" class="alert alert-danger">
@@ -43,10 +43,10 @@
         </div>
       </div>
     </div>
-    
+
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="text" class="form-control" id="email" required 
+      <input type="text" class="form-control" id="email" required
         [(ngModel)]="user.email" name="email" title="Enter Email Address"
         data-placement="right" data-toggle="tooltip" #eml="ngModel">
       <div *ngIf="eml.invalid && (eml.dirty || eml.touched)" class="alert alert-danger">
@@ -89,6 +89,26 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <label for="role">Role</label>
+      <select class="form-control" [(ngModel)]="user.role_name" [ngModelOptions]="{standalone: true}"
+      #role required>
+        <option #roleOption *ngFor="let role of user.roles"
+         [value]="role">{{ role }}</option>
+      </select>
+    </div>
+
+    <div *ngIf="role.invalid" class="alert alert-danger">
+      <div *ngIf="role.errors.required">
+        A role name is required
+      </div>
+    </div>
+
+    <!-- <pre> {{ role }} </pre> -->
+    <!-- <pre> {{ roleOption }} </pre>
+    <pre> {{ user | json }} </pre> -->
+
+    <!-- <pre>{{ createAccountForm.value | json }} </pre> -->
     <div class="buttonSpacer" style="text-align:center">
       <button type="button" class="btn btn-primary create-button" (click)="createNewAccount()" title="Create New Account Button">
         CREATE ACCOUNT
